--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Lora';
-  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg-keys.jpg");
+  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url("../img/bg-keys2.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
