Change first color of palette

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -80,7 +80,7 @@ p {
 }
 
 #mainNav .navbar-brand {
-  color: #e6a756;
+  color: #B0C9C5;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -89,7 +89,7 @@ p {
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: #B0C9C5;
 }
 
 @media (min-width: 992px) {
@@ -100,7 +100,7 @@ p {
     color: rgba(255, 255, 255, 0.4);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e6a756;
+    color: #B0C9C5;
   }
 }
 
@@ -210,7 +210,7 @@ p {
 
 .list-hours .list-hours-item.today {
   font-weight: bold;
-  color: #e6a756;
+  color: #B0C9C5;
 }
 
 @media (min-width: 992px) {
@@ -229,11 +229,11 @@ p {
 }
 
 .text-primary {
-  color: #e6a756 !important;
+  color: #B0C9C5 !important;
 }
 
 .bg-primary {
-  background-color: #e6a756 !important;
+  background-color: #B0C9C5 !important;
 }
 
 .btn {
@@ -241,8 +241,8 @@ p {
 }
 
 .btn-primary {
-  background-color: #e6a756;
-  border-color: #e6a756;
+  background-color: #B0C9C5;
+  border-color: #B0C9C5;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
