--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,6 @@
 body {
   @include body-font;
-  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../img/bg.jpg');
+  background-image: linear-gradient(rgba(47, 23, 15, 0.65), rgba(47, 23, 15, 0.65)), url('../img/bg-keys2.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -37,7 +37,7 @@ p {
   }
   .site-heading-lower {
     font-size: 5rem;
-    font-weight: 100;
+    font-weight: 120;
     line-height: 4rem;
   }
 }
