--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,4 @@
 .footer {
-  background-color: fade-out($secondary, 0.1);
+  background-color: rgba(84, 92, 95, 0.75);
+           color: rgba(225,225,225,0.8);
 }
